2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/OperationCopy.cc: name a copied partition 'copy of <source>'.

2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped to gparted-0.2.3
	  ===================================================

2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: removed testdata
	
2006-03-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* trivial cleanups

2006-03-27 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc: made icon behaviour more intelligent
	* src/GParted_Core.cc: small improvement in open_device_and_disk()

2006-03-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: made some small adjustments to devicechecks.

2006-03-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: sort devices alphabetically by default.

2006-03-25 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/DrawingAreaVisualDisk.cc: prevented a possible segfault at
	  startup. Thanks to LarryT for finding this.

2006-03-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* lots of cleanups in operationhandling. This resulted in cleaner/less
	  code and the fixing of some longstanding issues.

2006-03-20 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/DrawingAreaVisualDisk.h,
	  src/DrawingAreaVisualDisk.cc: fixed a few issues with
	  selecting/activating partitions.
	* include/Utils.h,
	  src/Utils.cc,
	  src/Dialog_Disklabel.cc,
	  src/Dialog_Partition_Info.cc (mk_label): improved support for
	  aligment.
	* src/Win_GParted.cc: fixed a small alignmentissue in the devices
	  submenu.

2006-03-19 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  src/Win_GParted.cc,
	  src/ext2.cc,
	  src/ext3.cc,
	  src/fat16.cc,
	  src/fat32.cc,
	  src/jfs.cc,
	  src/ntfs.cc,
	  src/reiserfs.cc: fixed issues with copying (see also #335004)
	* include/Operation.h,
	  src/Operation.cc: cleanups + added FIXME